# AgentBridge

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_DE.md  README_ES.md  README_FR.md  README_JP.md  README_KR.md  README_ZH.md  REAUDIT_REPORT.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agentbridge/: __init__.py  __main__.py  config.py
agentbridge/adapters/: anthropic.py  deepseek.py  google.py  ollama.py  openai.py
agentbridge/cli/: main.py
agentbridge/orchestrator/: pool.py  scheduler.py
agentbridge/terminals/: adapters.py
agentbridge/workflow/: engine.py
agentmesh/: __main__.py  config.py
agentmesh/adapters/: __init__.py  anthropic.py  deepseek.py  google.py  ollama.py  openai.py
agentmesh/cli/: main.py
agentmesh/memory/: store.py
agentmesh/workflow/: engine.py
docs/: architecture.md  demo-script.md  roadmap.md  shortcuts.md  vision-v2.md  vision.md
docs/archive/: v0.2-plan.md
examples/: debate.yaml  linguagraph-research.yaml  parallel-research.yaml  saas-builder.yaml
relayos/: __init__.py  config.py  cost.py  i18n.py
relayos/adapters/: __init__.py
relayos/cli/: display.py  main.py  wizard.py
relayos/core/: artifacts.py  budget.py  capabilities.py  conversation.py  identity.py  inbox.py  knowledge.py  planner.py  plugin.py  router.py  scheduler.py  session.py  state.py  worker.py
scripts/: demo.sh  hn-post.md  reddit-post.md
tests/: __init__.py  conftest.py  test_capabilities.py  test_compress.py  test_team_schemas.py
(+20 files in other folders)
