[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh"
version = "0.1.0a1"
description = "Multi-agent orchestration layer for AI tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "jjjjjjjjnnjnn"}]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
agentmesh = "agentmesh.cli.main:cli"

[project.entry-points."agentmesh.adapters"]
openai = "agentmesh.adapters.openai:OpenAIAdapter"
anthropic = "agentmesh.adapters.anthropic:AnthropicAdapter"
google = "agentmesh.adapters.google:GoogleAdapter"
ollama = "agentmesh.adapters.ollama:OllamaAdapter"
deepseek = "agentmesh.adapters.deepseek:DeepSeekAdapter"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentmesh*"]
